@@ -2,11 +2,15 @@ package com.yolo.customer.order.orderItem;
 
 import com.yolo.customer.recipe.Recipe;
 import com.yolo.customer.recipe.RecipeRepository;
+import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 public class OrderItemService {
@@ -19,9 +23,10 @@ public class OrderItemService {
         this.recipeRepository = recipeRepository;
     }
 
-    public List<Map<String, Object>> getOrderItemsWithRecipeByOrderId(Integer orderId) {
-        List<OrderItem> orderItems = orderItemRepository.findByOrderId(orderId);
-        return orderItems.stream().map(this::mapToOrderItemWithRecipe).toList();
+    public List<Map<String, Object>> getOrderItemsWithRecipeByOrderId(Integer orderId,  int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<OrderItem> orderItemPage = orderItemRepository.findByOrderIdOrderByCreatedAtDesc(orderId, pageable);
+        return orderItemPage.stream().map(this::mapToOrderItemWithRecipe).collect(Collectors.toList());
     }
 
     private Map<String, Object> mapToOrderItemWithRecipe(OrderItem orderItem) {
